--- a/gravitee-gateway-api/pom.xml
+++ b/gravitee-gateway-api/pom.xml
@@ -23,24 +23,27 @@
 
     <parent>
         <groupId>io.gravitee</groupId>
-        <artifactId>gateway</artifactId>
+        <artifactId>gravitee-gateway</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <groupId>io.gravitee.gateway</groupId>
-    <artifactId>gateway-platforms</artifactId>
+    <artifactId>gravitee-gateway-api</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <name>Gravitee IO - API Management - Gateway Platforms</name>
 
-    <modules>
-        <module>gateway-servlet</module>
-    </modules>
+    <name>Gravitee IO - API Management - Gateway API</name>
 
     <dependencies>
+        <!-- Gravitee internal dependencies -->
         <dependency>
-            <groupId>io.gravitee.gateway</groupId>
-            <artifactId>gateway-core</artifactId>
+            <groupId>io.gravitee.model</groupId>
+            <artifactId>gravitee-model</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.gravitee.common</groupId>
+            <artifactId>gravitee-common</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
