--- a/gravitee-gateway-core/pom.xml
+++ b/gravitee-gateway-core/pom.xml
@@ -23,12 +23,12 @@
 
     <parent>
         <groupId>io.gravitee</groupId>
-        <artifactId>gateway</artifactId>
+        <artifactId>gravitee-gateway</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <groupId>io.gravitee.gateway</groupId>
-    <artifactId>gateway-core</artifactId>
+    <artifactId>gravitee-gateway-core</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
     <name>Gravitee IO - API Management - Gateway Core</name>
@@ -37,7 +37,7 @@
         <!-- Gravitee internal dependencies -->
         <dependency>
             <groupId>io.gravitee.gateway</groupId>
-            <artifactId>gateway-api</artifactId>
+            <artifactId>gravitee-gateway-api</artifactId>
             <version>${project.version}</version>
         </dependency>
 
