--- a/gravitee-gateway-platforms/gravitee-gateway-servlet/pom.xml
+++ b/gravitee-gateway-platforms/gravitee-gateway-servlet/pom.xml
@@ -23,12 +23,12 @@
 
     <parent>
         <groupId>io.gravitee.gateway</groupId>
-        <artifactId>gateway-platforms</artifactId>
+        <artifactId>gravitee-gateway-platforms</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <groupId>io.gravitee.gateway.platforms</groupId>
-    <artifactId>gateway-servlet</artifactId>
+    <artifactId>gravitee-gateway-servlet</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>Gravitee IO - API Management - Gateway Platforms - Servlet</name>
 
