--- a/gravitee-gateway-platforms/pom.xml
+++ b/gravitee-gateway-platforms/pom.xml
@@ -23,27 +23,24 @@
 
     <parent>
         <groupId>io.gravitee</groupId>
-        <artifactId>gateway</artifactId>
+        <artifactId>gravitee-gateway</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <groupId>io.gravitee.gateway</groupId>
-    <artifactId>gateway-api</artifactId>
+    <artifactId>gravitee-gateway-platforms</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <name>Gravitee IO - API Management - Gateway Platforms</name>
 
-    <name>Gravitee IO - API Management - Gateway API</name>
+    <modules>
+        <module>gravitee-gateway-servlet</module>
+    </modules>
 
     <dependencies>
-        <!-- Gravitee internal dependencies -->
         <dependency>
-            <groupId>io.gravitee.model</groupId>
-            <artifactId>gravitee-model</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>io.gravitee.common</groupId>
-            <artifactId>gravitee-common</artifactId>
+            <groupId>io.gravitee.gateway</groupId>
+            <artifactId>gravitee-gateway-core</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
