--- a/pom.xml
+++ b/pom.xml
@@ -28,15 +28,15 @@
     </parent>
 
     <groupId>io.gravitee</groupId>
-    <artifactId>gateway</artifactId>
+    <artifactId>gravitee-gateway</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Gravitee IO - API Management</name>
 
     <modules>
-        <module>gateway-api</module>
-        <module>gateway-core</module>
-        <module>gateway-platforms</module>
+        <module>gravitee-gateway-api</module>
+        <module>gravitee-gateway-core</module>
+        <module>gravitee-gateway-platforms</module>
     </modules>
 
     <dependencyManagement>
