--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,8 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>io.gravitee.admin</groupId>
-    <artifactId>gateway-admin-rest</artifactId>
+    <groupId>io.gravitee.management</groupId>
+    <artifactId>gravitee-management-rest-api</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>Gravitee IO - API Management - Admin - Rest API</name>
 
@@ -36,7 +36,7 @@
         <!-- Gravitee dependencies -->
         <dependency>
             <groupId>io.gravitee.gateway</groupId>
-            <artifactId>gateway-api</artifactId>
+            <artifactId>gravitee-gateway-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -45,8 +45,8 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>io.gravitee.gateway.registry</groupId>
-            <artifactId>gateway-mongodb</artifactId>
+            <groupId>io.gravitee.repositories</groupId>
+            <artifactId>gravitee-repository-mongodb</artifactId>
             <version>${project.version}</version>
         </dependency>
         <!-- Jersey dependencies -->
