--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <module>gravitee-gateway-api</module>
         <module>gravitee-gateway-core</module>
         <module>gravitee-gateway-platforms</module>
+        <module>gravitee-gateway-policies</module>
     </modules>
 
     <dependencyManagement>
@@ -85,6 +86,5 @@
         <slf4j.version>1.7.12</slf4j.version>
         <spring.version>4.1.6.RELEASE</spring.version>
         <mockito.version>1.10.19</mockito.version>
-        <powermock.version>1.6.2</powermock.version>
     </properties>
 </project>
