--- a/pom.xml
+++ b/pom.xml
@@ -16,14 +16,6 @@
     limitations under the License.
 
 -->
-<!-- Copyright (C) 2015 The Gravitee team (http://gravitee.io) Licensed under 
-	the Apache License, Version 2.0 (the "License"); you may not use this file 
-	except in compliance with the License. You may obtain a copy of the License 
-	at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable 
-	law or agreed to in writing, software distributed under the License is distributed 
-	on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either 
-	express or implied. See the License for the specific language governing permissions 
-	and limitations under the License. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
@@ -36,6 +28,7 @@
 
 	<groupId>io.gravitee.management</groupId>
 	<artifactId>gravitee-management-rest-api</artifactId>
+	<packaging>${packaging.type}</packaging>
 	<version>1.0.0-SNAPSHOT</version>
 	<name>Gravitee IO - API Management - Admin - Rest API</name>
 
@@ -110,4 +103,69 @@
 		<spring.security.version>3.2.8.RELEASE</spring.security.version>
 		<spring.security.oauth2.version>2.0.7.RELEASE</spring.security.oauth2.version>
 	</properties>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>9.2.0.RC0</version>
+			</plugin>
+		</plugins>
+	</build>
+	
+	<profiles>
+		<profile>
+			<id>embedded-webapp</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<packaging.type>jar</packaging.type>
+			</properties>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-shade-plugin</artifactId>
+						<version>1.5</version>
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<goals>
+									<goal>shade</goal>
+								</goals>
+								<configuration>
+									<transformers>
+										<transformer
+											implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+											<mainClass>io.gravitee.admin.api.resources.App</mainClass>
+										</transformer>
+										<transformer
+											implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+											<resource>META-INF/spring.handlers</resource>
+										</transformer>
+										<transformer
+											implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+											<resource>META-INF/spring.schemas</resource>
+										</transformer>
+									</transformers>
+									<shadedArtifactAttached>true</shadedArtifactAttached>
+									<!-- configures the suffix name for the executable jar here it will be 
+										'<project.artifact>-<project.version>-executable.jar' -->
+									<shadedClassifierName>executable</shadedClassifierName>
+								</configuration>
+							</execution>
+						</executions>
+		            </plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>webapp</id>
+			<properties>
+				<packaging.type>war</packaging.type>
+			</properties>
+		</profile>
+	</profiles>
 </project>
