--- a/pom.xml
+++ b/pom.xml
@@ -1,109 +1,106 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
+<!-- Copyright (C) 2015 The Gravitee team (http://gravitee.io) Licensed under 
+	the Apache License, Version 2.0 (the "License"); you may not use this file 
+	except in compliance with the License. You may obtain a copy of the License 
+	at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable 
+	law or agreed to in writing, software distributed under the License is distributed 
+	on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either 
+	express or implied. See the License for the specific language governing permissions 
+	and limitations under the License. -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    Copyright (C) 2015 The Gravitee team (http://gravitee.io)
+	<parent>
+		<groupId>io.gravitee</groupId>
+		<artifactId>gravitee-parent</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+	</parent>
 
-    Licensed under the Apache License, Version 2.0 (the "License");
-    you may not use this file except in compliance with the License.
-    You may obtain a copy of the License at
+	<groupId>io.gravitee.repositories</groupId>
+	<artifactId>gravitee-repository-mongodb</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+	<name>Gravitee IO - API Management - Repository MongoDB</name>
 
-            http://www.apache.org/licenses/LICENSE-2.0
+	<properties>
+		<embed.mongo.version>1.47.3</embed.mongo.version>
+		<embedmongo-maven-plugin.version>0.1.12</embedmongo-maven-plugin.version>
+		<mongo.version>3.0.2</mongo.version>
+		<powermock.version>1.6.2</powermock.version>
+	</properties>
 
-    Unless required by applicable law or agreed to in writing, software
-    distributed under the License is distributed on an "AS IS" BASIS,
-    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    See the License for the specific language governing permissions and
-    limitations under the License.
+	<dependencies>
+		<!-- Gravitee dependencies -->
+		<dependency>
+			<groupId>io.gravitee.repositories</groupId>
+			<artifactId>gravitee-repository</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 
--->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>io.gravitee</groupId>
-        <artifactId>gravitee-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-    </parent>
+		<!-- MongoDB dependencies -->
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-mongodb</artifactId>
+			<version>1.7.2.RELEASE</version>
+		</dependency>
 
-    <groupId>io.gravitee.repositories</groupId>
-    <artifactId>gravitee-repository-mongodb</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <name>Gravitee IO - API Management - Repository MongoDB</name>
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-core</artifactId>
+		<version>4.2.0.RELEASE</version>
+	</dependency>
 
-    <properties>
-        <embed.mongo.version>1.47.3</embed.mongo.version>
-        <embedmongo-maven-plugin.version>0.1.12</embedmongo-maven-plugin.version>
-        <mongo.version>3.0.2</mongo.version>
-        <powermock.version>1.6.2</powermock.version>
-    </properties>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>4.2.0.RELEASE</version>
+		</dependency>
 
-    <dependencies>
-        <!-- Gravitee dependencies -->
-        <dependency>
-            <groupId>io.gravitee.gateway</groupId>
-            <artifactId>gravitee-gateway-core</artifactId>
-            <version>${project.version}</version>
-        </dependency>
+		<dependency>
+			<groupId>de.flapdoodle.embed</groupId>
+			<artifactId>de.flapdoodle.embed.mongo</artifactId>
+			<version>${embed.mongo.version}</version>
+			<scope>test</scope>
+		</dependency>
 
-        <dependency>
-            <groupId>io.gravitee.model</groupId>
-            <artifactId>gravitee-model</artifactId>
-            <version>${project.version}</version>
-        </dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-module-junit4</artifactId>
+			<version>${powermock.version}</version>
+			<scope>test</scope>
+		</dependency>
 
-        <!-- MongoDB dependencies -->
-        <dependency>
-            <groupId>org.mongodb</groupId>
-            <artifactId>mongo-java-driver</artifactId>
-            <version>${mongo.version}</version>
-        </dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-api-mockito</artifactId>
+			<version>${powermock.version}</version>
+			<scope>test</scope>
+		</dependency>
 
-        <dependency>
-            <groupId>de.flapdoodle.embed</groupId>
-            <artifactId>de.flapdoodle.embed.mongo</artifactId>
-            <version>${embed.mongo.version}</version>
-            <scope>test</scope>
-        </dependency>
+	</dependencies>
 
-        <dependency>
-            <groupId>org.powermock</groupId>
-            <artifactId>powermock-module-junit4</artifactId>
-            <version>${powermock.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.powermock</groupId>
-            <artifactId>powermock-api-mockito</artifactId>
-            <version>${powermock.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-    </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>com.github.joelittlejohn.embedmongo</groupId>
-                <artifactId>embedmongo-maven-plugin</artifactId>
-                <version>${embedmongo-maven-plugin.version}</version>
-                <executions>
-                    <execution>
-                        <id>start</id>
-                        <goals>
-                            <goal>start</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>stop</id>
-                        <goals>
-                            <goal>stop</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>com.github.joelittlejohn.embedmongo</groupId>
+				<artifactId>embedmongo-maven-plugin</artifactId>
+				<version>${embedmongo-maven-plugin.version}</version>
+				<executions>
+					<execution>
+						<id>start</id>
+						<goals>
+							<goal>start</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>stop</id>
+						<goals>
+							<goal>stop</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
