--- a/security/pom.xml
+++ b/security/pom.xml
@@ -21,41 +21,42 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>io.gravitee</groupId>
-		<artifactId>gravitee-parent</artifactId>
+		<groupId>io.gravitee.management</groupId>
+		<artifactId>gravitee-management-api</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
 	<groupId>io.gravitee.management</groupId>
-	<artifactId>gravitee-management-api</artifactId>
-	<packaging>pom</packaging>
+	<artifactId>gravitee-management-api-security</artifactId>
+	<packaging>jar</packaging>
 
-	<version>1.0.0-SNAPSHOT</version>
-	<name>Gravitee IO - API Management</name>
-
-	<modules>
-		<module>rest</module>
-		<module>war</module>
-		<module>standalone</module>
-		<module>security</module>
-	</modules>
+	<name>Gravitee IO - API Management - Security</name>
 
 	<dependencies>
+		<!-- Spring dependencies -->
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>${javax.servlet-api.version}</version>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+
+		<!-- Spring Security dependencies -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${spring.security.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${spring.security.version}</version>
+		</dependency>
+
+		<!-- Spring Security OAuth 2 dependencies -->
+		<dependency>
+			<groupId>org.springframework.security.oauth</groupId>
+			<artifactId>spring-security-oauth2</artifactId>
+			<version>${spring.security.oauth2.version}</version>
 		</dependency>
 	</dependencies>
-
-	<properties>
-		<jetty.version>9.2.11.v20150529</jetty.version>
-		<jackson.version>2.5.3</jackson.version>
-		<jersey.version>2.19</jersey.version>
-		<spring.version>4.1.6.RELEASE</spring.version>
-		<spring.security.version>3.2.8.RELEASE</spring.security.version>
-		<spring.security.oauth2.version>2.0.7.RELEASE</spring.security.oauth2.version>
-		<mockito.version>1.10.19</mockito.version>
-		<javax.servlet-api.version>3.1.0</javax.servlet-api.version>
-	</properties>
 </project>
