--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 	<properties>
 		<jedis.version>2.8.0</jedis.version>
 		<jackson.version>2.5.3</jackson.version>
-		<gravitee-repository.version>0.7.0</gravitee-repository.version>
+		<gravitee-repository.version>0.8.0-SNAPSHOT</gravitee-repository.version>
 		<spring-data-redis.version>1.6.2.RELEASE</spring-data-redis.version>
 	</properties>
 
