--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,7 @@
         <gravitee-plugin-core.version>0.5.0</gravitee-plugin-core.version>
         <gravitee-plugin-policy.version>0.5.0</gravitee-plugin-policy.version>
         <gravitee-policy-api.version>0.5.0</gravitee-policy-api.version>
-        <gravitee-gateway-api.version>0.7.0</gravitee-gateway-api.version>
+        <gravitee-gateway-api.version>0.8.0-SNAPSHOT</gravitee-gateway-api.version>
         <gravitee-repository-mongodb.version>0.7.0</gravitee-repository-mongodb.version>
         <jackson.version>2.5.3</jackson.version>
         <vertx.version>3.2.1</vertx.version>
