--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 		<gravitee-definition.version>0.7.0</gravitee-definition.version>
 		<gravitee-plugin-core.version>0.5.0</gravitee-plugin-core.version>
 		<gravitee-plugin-policy.version>0.5.0</gravitee-plugin-policy.version>
-		<gravitee-repository.version>0.7.0</gravitee-repository.version>
+		<gravitee-repository.version>0.8.0-SNAPSHOT</gravitee-repository.version>
 		<gravitee-repository-elasticsearch.version>0.6.0</gravitee-repository-elasticsearch.version>
 		<gravitee-repository-mongodb.version>0.7.0</gravitee-repository-mongodb.version>
 		<gravitee-repository-couchbase.version>0.1.0-SNAPSHOT</gravitee-repository-couchbase.version>
